# selenium-python-framework

./: .dockerignore  .env.dev  .env.example  .env.qa  .env.staging  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
api/: __init__.py  api_client.py  base_api.py
api/client/: api_client.py
api/models/: __init__.py  post_model.py  todo_model.py  user_model.py
api/schemas/: __init__.py  post_schema.py  todo_schema.py  user_schema.py
api/services/: __init__.py  base_service.py  jsonplaceholder_service.py
components/: __init__.py  base_component.py  footer_component.py  modal_component.py  navbar_component.py  sidebar_component.py
config/: __init__.py  config_loader.py  constants.py  environments.py  settings.py
core/: __init__.py  base_page.py  base_test.py  driver_factory.py
core/driver/: __init__.py  browser_options.py  driver_factory.py  driver_manager.py
core/wrappers/: __init__.py  element_actions.py  javascript_actions.py  waits.py
data/: __init__.py  test_data.json
data/factories/: __init__.py  api_payload_factory.py  base_factory.py  product_factory.py  user_factory.py
data/json/: __init__.py  api_payloads.json  checkout_profiles.json  error_messages.json  json_data_loader.py  (+2 more)
flows/: __init__.py  base_flow.py  cart_flow.py  checkout_flow.py  flow_utils.py  login_flow.py  saucedemo_checkout_flow.py
jenkins/: Jenkinsfile
pages/: __init__.py  base_page.py  dashboard_page.py
tests/: sample_test.py  test_jsonplaceholder_api.py  test_offline_verification.py  test_sample.py  test_saucedemo_cart.py  test_saucedemo_checkout.py  test_saucedemo_inventory.py  test_saucedemo_login.py
utils/: __init__.py  allure_manager.py  data_generator.py  helpers.py  logger.py  retry_handler.py  screenshot_manager.py
(+20 files in other folders)
